add GetChannelSubscriber and GetChannelAdmin  and their swagger
